make the button a bit wider on the search form

--- a/views/searchform.twig
+++ b/views/searchform.twig
@@ -2,11 +2,11 @@
 <div class="row">
 	<form role="search" method="get" class="col s12 search-form" action="{{ site.url }}/">
 		<div class="row">
-			<div class="input-field col s12 m8">
+			<div class="input-field col s12 m12 l7">
 				<input id="searchform" type="text" class="search-field" value="" name="s" title="Search for:" />
 				<label for="searchform">{{ __('Search', 'maera_md') }}</label>
 			</div>
-			<div class="input-field col s12 m4">
+			<div class="input-field col s12 m12 l5">
 				<input type="submit" class="btn search-submit" value="Search" />
 			</div>
 		</div>
