--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,22 +1,26 @@
 {#<?php#}
-{% from 'container_open.html.twig' import container_open as container_open %}
-{% from 'container_close.html.twig' import container_close as container_close %}
+{% import 'grid_classes.html.twig' as grid %}
 
 <footer class="{{ red|apply_filters('maera/nav/class') }} lighten-2">
 	{% do action( 'maera/footer/before', post.ID ) %}
 	<div class="page-footer">
 		{% do action( 'maera/footer/start', post.ID ) %}
-		{{ container_open( 'div', 'wrap-footer-section', 'wrap footer-section' ) }}
+		<div class="{{ grid.container() }} wrap footer-section" id="wrap-footer-section">
 			{% do action( 'maera/footer/content' ) %}
-			<script>$(document).ready(function(){
-				$('.parallax').parallax();
-				$(".button-collapse").sideNav();
-			});</script>
-			{{ container_close( 'div' ) }}
+			{% if sidebar.header %}
+				{{ sidebar.footer }}
+			{% endif %}
+		</div>
 		{% do action( 'maera/footer/end', post.ID ) %}
 	</div>
 	{% do action( 'maera/footer/after', post.ID ) %}
 	{{ function( 'wp_footer' ) }}
 </footer>
+<script>
+$(document).ready(function(){
+	$('.parallax').parallax();
+	$(".button-collapse").sideNav();
+});
+</script>
 </body>
 </html>
