--- a/views/footer.twig
+++ b/views/footer.twig
@@ -8,7 +8,7 @@
 		<div class="{{ grid.container() }} wrap footer-section" id="wrap-footer-section">
 			{% do action( 'maera/footer/content' ) %}
 			{% if sidebar.header %}
-				{{ sidebar.footer }}
+				<div class="{{ grid.row() }}">{{ sidebar.footer }}</div>
 			{% endif %}
 		</div>
 		{% do action( 'maera/footer/end', post.ID ) %}
