--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -7002,8 +7002,7 @@ ul.table-of-contents {
 .header.hero {
   background-size: cover;
   background-repeat: no-repeat;
-  height: 50vh;
-  min-height: 500px; }
+  height: auto; }
 
 img, figure {
   max-width: 100%;
