--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -86,8 +86,7 @@ ul.table-of-contents {
 .header.hero {
     background-size: cover;
     background-repeat: no-repeat;
-    height: 50vh;
-    min-height: 500px;
+    height: auto;
 }
 
 img, figure {
