--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -256,6 +256,10 @@ img, figure {
             }
         }
 
+        &.admin-bar #nav-mobile {
+            margin-top: 32px;
+        }
+
     }
 
 }
